@@ -39,6 +39,8 @@ maint jit dump
 * Building GDB now requires GMP (The GNU Multiple Precision Arithmetic
   Library).
 
+* Add convenience variable `$_simd_lane`.
+
 * MI changes
 
  ** '-break-insert --qualified' and '-dprintf-insert --qualified'
